# clibr

./: .gitignore  .pre-commit-config.yaml  books.py  config.py  main.py  models.py  pyproject.toml  quotes.py  repositories.py  requirements.txt  test_repositories.py
commands/: __init__.py  books.py  print.py  quotes.py  utils.py
repositories/: __init__.py  author_repository.py  base_repository.py  book_repository.py  enums.py  quote_repository.py
tests/: test_book_repository.py  test_quote_repository.py  test_repositories.py  utils.py
