[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["daniarlert <24715931+daniarlert@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.10.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
