[tool.poetry]
name = "clibr"
version = "0.1.0"
description = "A books & quotes manager for the terminal."
authors = ["daniarlert <24715931+daniarlert@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = { extras = ["all"], version = "^0.9.0" }
sqlmodel = "^0.0.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
black = "^23.10.0"
ruff = "^0.1.0"
commitizen = "^3.12.0"
pytest = "^7.4.3"
isort = "^5.12.0"
pyupgrade = "^3.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
